z-index fix

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Ubuntu';
 }
 
+.ReactModalPortal * {
+  z-index: 10;
+}
+
 .selectors {
   display: flex;
   width: 100%;
